--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@ url : "https://YolandaWang87.github.io"
 
 # Blog Settings
 theme_settings :
-  title : Grape Theme
+  title : My Blog
   favicon : assets/favicon.ico
 
   # Profile Settings
   profile :
     image : assets/img/smile.png
     username : Yolanda Wang
-    description : creator of Grape-Theme! Grape-Theme is my first jekyll theme and you can customize this theme easily.
+    description : Grape-Theme is my first jekyll theme and you can customize this theme easily.
     experience :
       - start : 2017-05-03
         end : 2018-05-06
@@ -47,3 +47,5 @@ sass:
 gems: [jekyll-paginate]
 bootstrap:
   assets: true
+
+port: 5050
